Converted it to using C++, much nicer on the eyes.

--- a/OpenCL/OpenCL.vcxproj.filters
+++ b/OpenCL/OpenCL.vcxproj.filters
@@ -21,10 +21,18 @@
     <ClCompile Include="Source\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\main_cpp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Compute\SimpleAddition.cl">
       <Filter>Compute Files</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Include\FileHelperFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
