--- a/OpenCL/OpenCL.vcxproj
+++ b/OpenCL/OpenCL.vcxproj
@@ -67,11 +67,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source\main.cpp" />
+    <ClCompile Include="Source\main_cpp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Compute\SimpleAddition.cl">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</DeploymentContent>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Include\FileHelperFunctions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
