--- a/OpenCL/Sheets/PropertySheet.props
+++ b/OpenCL/Sheets/PropertySheet.props
@@ -3,7 +3,7 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
-    <OutDir>$(ProjectDir)$(Configuration)\</OutDir>
+    <OutDir>$(ProjectDir)Output\$(Configuration)\</OutDir>
     <IncludePath>$(SolutionDir)References\include;$(ProjectDir)Include;$(SolutionDir)References\glew-1.12.0\include;$(SolutionDir)References\glfw-3.1.bin.WIN32\include;$(SolutionDir)References\\glm-0.9.6.1\glm;$(IncludePath)</IncludePath>
     <LibraryPath>$(IncludePath);$(SolutionDir)References\lib\x86;$(SolutionDir)References\glfw-3.1.bin.WIN32\lib-vc2013;$(SolutionDir)References\glew-1.12.0\lib\Release\Win32;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
