--- a/OpenCL/OpenCL.vcxproj.filters
+++ b/OpenCL/OpenCL.vcxproj.filters
@@ -18,9 +18,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source\main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Source\main_cpp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -32,9 +29,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Compute\SimpleAddition.cl">
-      <Filter>Compute Files</Filter>
-    </None>
     <None Include="Compute\SPH_DensityAndPressure.cl">
       <Filter>Compute Files</Filter>
     </None>
@@ -71,6 +65,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Include\FrameLimiter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Include\real_t.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
